commo disease custom  model added.

--- a/potato_earlyblight_lateblight_healthy_custom_model.ipynb
+++ b/potato_earlyblight_lateblight_healthy_custom_model.ipynb
@@ -264,12 +264,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 126,
    "id": "275a75fa-2249-4959-88e4-b2426827dafd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Setting data augmentation (Increase)\n",
+    "#Setting data augmentation\n",
     "\n",
     "data_augmentation = tf.keras.Sequential([\n",
     "    layers.RandomBrightness(0.2),\n",
