All done finaly

--- a/potato_common_diseases_final_models.ipynb
+++ b/potato_common_diseases_final_models.ipynb
@@ -1878,8 +1878,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c179e8e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.16.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d838569b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keras\n",
+    "print(keras.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4facccba",
    "metadata": {},
    "outputs": [],
    "source": []
